src/objects/Warehouse__c.object
<CustomObject>
    <description>Check Availability Of Particular Deliver Item</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Customer ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>service_request_form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>service request form</label>
        <referenceTo>service_request_form__c</referenceTo>
        <relationshipLabel>Warehouses</relationshipLabel>
        <relationshipName>Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>